# explore_image_analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  mnist_basic_cnn.py  pyproject.toml
