[project]
name = "explore_image_analysis"
version = "0.1.0"
description = "Explore various ML algorithms applied to images (CNNs, VAEs, Diffussion, etc.)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
